# claude-dash-cli

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: publish.yml
src/: app.rs  main.rs  types.rs  types.ts  usage.rs  utils.rs
src/cmd/: daemon.rs  hook.rs  install.rs  mod.rs
src/daemon/: hook-server.ts  index.ts  state.ts  tui-server.ts
src/hook/: index.ts
src/install/: index.ts
src/tui/: app.tsx  index.tsx  utils.ts
src/tui/components/: agent-detail.tsx  agent-row.tsx  chat-message.tsx  footer.tsx  header.tsx  new-session-overlay.tsx  permission-overlay.tsx  session-list.tsx  session-row.tsx  tool-diff.tsx  tool-history-panel.tsx  tool-history-row.tsx  usage-panel.tsx  usage-strip.tsx
src/tui/contexts/: animation.tsx
src/tui/hooks/: use-clock.ts  use-daemon.ts  use-keymap.ts  use-terminal-size.ts  use-transcript.ts  use-usage.ts
src/ui/: footer.rs  overlays.rs  session_list.rs  usage_panel.rs
tui/: Cargo.toml
tui-rs/: Cargo.toml
tui-rs/src/: app.rs  daemon.rs  main.rs  transcript.rs  types.rs  utils.rs
tui-rs/src/ui/: agent_detail.rs  footer.rs  mod.rs  overlays.rs  session_list.rs  usage_panel.rs
tui/src/: main.rs
tui/src/cmd/: hook.rs
tui/src/ui/: usage_panel.rs
xtask/: Cargo.toml
xtask/src/: main.rs
