[package]
name = "claude-dash"
version = "0.9.2"
edition = "2021"
description = "Terminal dashboard for monitoring Claude Code sessions in real time"
repository = "https://github.com/kud/claude-dash-cli"
license = "MIT"
keywords = ["claude", "ai", "tui", "dashboard", "terminal"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "claude-dash"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
