[package]
name = "claude-dash"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-dash"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
libc = "0.2"
